Edits to races and class/race combos.

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -165,27 +165,27 @@ damage.modifier.vicious.strike=1.050
 damage.modifier.divineforce=1.250
 damage.modifier.meleemastery=1.100
 damage.totalOutput.racial.None=1.000
-damage.totalOutput.racial.Human=1.200
+damage.totalOutput.racial.Human=1.100
 damage.totalOutput.racial.Barbarian=1.250
 damage.totalOutput.racial.DrowElf=0.900
 damage.totalOutput.racial.GreyElf=0.900
 damage.totalOutput.racial.MountainDwarf=1.200
 damage.totalOutput.racial.DuergarDwarf=1.200
-damage.totalOutput.racial.Halfling=1.050
-damage.totalOutput.racial.Gnome=1.100
-damage.totalOutput.racial.Ogre=1.850
+damage.totalOutput.racial.Halfling=1.000
+damage.totalOutput.racial.Gnome=0.900
+damage.totalOutput.racial.Ogre=1.800
 damage.totalOutput.racial.Troll=1.300
 damage.totalOutput.racial.Half-Elf=1.050
 damage.totalOutput.racial.Illithid=0.600
 damage.totalOutput.racial.Orc=1.200
 damage.totalOutput.racial.Orog=2.000
 damage.totalOutput.racial.Thri-Kreen=1.150
-damage.totalOutput.racial.Centaur=1.224
-damage.totalOutput.racial.Githyanki=0.920
+damage.totalOutput.racial.Centaur=1.200
+damage.totalOutput.racial.Githyanki=0.950
 damage.totalOutput.racial.Minotaur=1.300
 damage.totalOutput.racial.Shade=0.750
 damage.totalOutput.racial.Revenant=1.850
-damage.totalOutput.racial.Goblin=1.110
+damage.totalOutput.racial.Goblin=1.050
 damage.totalOutput.racial.Lich=0.800
 damage.totalOutput.racial.Vampire=1.650
 damage.totalOutput.racial.Ghaele=1.000
@@ -230,7 +230,7 @@ damage.totalOutput.racial.Dracolich=2.500
 damage.totalOutput.racial.Titan=3.000
 damage.totalOutput.racial.Avatar=3.000
 damage.totalOutput.racial.Slime=0.900
-damage.totalOutput.racial.Githzerai=0.940
+damage.totalOutput.racial.Githzerai=0.950
 damage.totalOutput.racial.Angel=1.000
 damage.totalOutput.racial.Rakshasa=1.300
 damage.totalOutput.racial.Efreet=1.900
@@ -245,110 +245,110 @@ damage.totalOutput.racial.Spectre=0.900
 damage.totalOutput.racial.Wraith=0.780
 damage.totalOutput.racial.Shadow=0.800
 damage.totalOutput.racial.Deva=1.000
-damage.totalOutput.racial.Drider=1.100
+damage.totalOutput.racial.Drider=1.250
 damage.totalOutput.racial.PurpleWorm=2.000
 damage.totalOutput.racial.Agathinon=1.000
 damage.totalOutput.racial.VoidElemental=1.000
 damage.totalOutput.racial.IceElemental=1.500
 damage.totalOutput.racial.Eladrin=1.000
-damage.totalOutput.racial.Kobold=1.120
+damage.totalOutput.racial.Kobold=0.950
 damage.totalOutput.racial.Pillithid=1.000
 damage.totalOutput.racial.KuoToa=1.200
 damage.totalOutput.racial.WoodElf=1.200
 damage.totalOutput.racial.Firbolg=1.700
 damage.pulse.class.all=2.000
 damage.pulse.racial.None=13.000
-damage.pulse.racial.Human=14.000
-damage.pulse.racial.Barbarian=14.750
-damage.pulse.racial.DrowElf=11.500
-damage.pulse.racial.GreyElf=11.500
-damage.pulse.racial.MountainDwarf=14.500
-damage.pulse.racial.DuergarDwarf=14.500
-damage.pulse.racial.Halfling=10.200
-damage.pulse.racial.Gnome=8.500
-damage.pulse.racial.Ogre=16.000
-damage.pulse.racial.Troll=15.000
+damage.pulse.racial.Human=15.000
+damage.pulse.racial.Barbarian=16.250
+damage.pulse.racial.DrowElf=13.500
+damage.pulse.racial.GreyElf=13.500
+damage.pulse.racial.MountainDwarf=16.000
+damage.pulse.racial.DuergarDwarf=16.000
+damage.pulse.racial.Halfling=11.500
+damage.pulse.racial.Gnome=10.500
+damage.pulse.racial.Ogre=17.500
+damage.pulse.racial.Troll=16.500
 damage.pulse.racial.Half-Elf=13.000
-damage.pulse.racial.Illithid=14.000
-damage.pulse.racial.Orc=14.000
-damage.pulse.racial.Orog=13.000
-damage.pulse.racial.Thri-Kreen=13.000
-damage.pulse.racial.Centaur=14.100
-damage.pulse.racial.Githyanki=13.250
+damage.pulse.racial.Illithid=15.500
+damage.pulse.racial.Orc=15.000
+damage.pulse.racial.Orog=15.000
+damage.pulse.racial.Thri-Kreen=15.000
+damage.pulse.racial.Centaur=15.500
+damage.pulse.racial.Githyanki=15.000
 damage.pulse.racial.Minotaur=15.200
-damage.pulse.racial.Shade=13.000
-damage.pulse.racial.Revenant=15.000
-damage.pulse.racial.Goblin=10.200
-damage.pulse.racial.Lich=10.000
-damage.pulse.racial.Vampire=11.000
-damage.pulse.racial.Ghaele=11.000
+damage.pulse.racial.Shade=15.000
+damage.pulse.racial.Revenant=16.000
+damage.pulse.racial.Goblin=11.000
+damage.pulse.racial.Lich=12.000
+damage.pulse.racial.Vampire=13.000
+damage.pulse.racial.Ghaele=13.000
 damage.pulse.racial.DeathKnight=14.000
 damage.pulse.racial.ShadowBeast=12.000
 damage.pulse.racial.StormGiant=14.500
-damage.pulse.racial.Wight=14.500
-damage.pulse.racial.Phantom=13.000
-damage.pulse.racial.Harpy=10.000
-damage.pulse.racial.Gargoyle=13.000
-damage.pulse.racial.FireElemental=12.000
-damage.pulse.racial.AirElemental=11.000
-damage.pulse.racial.WaterElemental=13.000
-damage.pulse.racial.EarthElemental=14.000
-damage.pulse.racial.Demon=13.500
-damage.pulse.racial.Devil=12.000
-damage.pulse.racial.Undead=12.000
-damage.pulse.racial.Ghost=12.000
-damage.pulse.racial.Lycanthrope=12.000
-damage.pulse.racial.Giant=16.000
-damage.pulse.racial.HalfOrc=12.000
-damage.pulse.racial.Golem=16.000
-damage.pulse.racial.Faerie=10.000
-damage.pulse.racial.Dragon=17.000
-damage.pulse.racial.Dragonkin=15.000
-damage.pulse.racial.Reptile=12.000
-damage.pulse.racial.Snake=12.000
-damage.pulse.racial.Insect=10.000
-damage.pulse.racial.Arachnid=10.000
-damage.pulse.racial.AquaticAnimal=11.000
-damage.pulse.racial.FlyingAnimal=9.000
-damage.pulse.racial.Quadraped=12.000
-damage.pulse.racial.Primate=12.000
-damage.pulse.racial.Humanoid=12.000
-damage.pulse.racial.Animal=12.000
-damage.pulse.racial.Plant=14.000
-damage.pulse.racial.Herbivore=12.000
-damage.pulse.racial.Carnivore=12.000
-damage.pulse.racial.Parasite=12.000
-damage.pulse.racial.Beholder=9.000
-damage.pulse.racial.Dracolich=14.000
-damage.pulse.racial.Slime=12.000
-damage.pulse.racial.Githzerai=13.250
-damage.pulse.racial.Angel=12.000
-damage.pulse.racial.Rakshasa=12.000
-damage.pulse.racial.Efreet=10.000
-damage.pulse.racial.SnowOgre=13.000
-damage.pulse.racial.Beholderkin=8.000
-damage.pulse.racial.Archon=12.000
-damage.pulse.racial.Bralani=10.000
-damage.pulse.racial.Asura=10.500
+damage.pulse.racial.Wight=15.500
+damage.pulse.racial.Phantom=14.000
+damage.pulse.racial.Harpy=12.000
+damage.pulse.racial.Gargoyle=15.000
+damage.pulse.racial.FireElemental=14.000
+damage.pulse.racial.AirElemental=12.000
+damage.pulse.racial.WaterElemental=15.000
+damage.pulse.racial.EarthElemental=16.000
+damage.pulse.racial.Demon=15.500
+damage.pulse.racial.Devil=14.000
+damage.pulse.racial.Undead=16.000
+damage.pulse.racial.Ghost=13.500
+damage.pulse.racial.Lycanthrope=14.000
+damage.pulse.racial.Giant=18.000
+damage.pulse.racial.HalfOrc=14.500
+damage.pulse.racial.Golem=17.000
+damage.pulse.racial.Faerie=12.000
+damage.pulse.racial.Dragon=17.500
+damage.pulse.racial.Dragonkin=16.500
+damage.pulse.racial.Reptile=14.000
+damage.pulse.racial.Snake=14.000
+damage.pulse.racial.Insect=12.000
+damage.pulse.racial.Arachnid=12.000
+damage.pulse.racial.AquaticAnimal=13.000
+damage.pulse.racial.FlyingAnimal=11.000
+damage.pulse.racial.Quadraped=14.000
+damage.pulse.racial.Primate=15.000
+damage.pulse.racial.Humanoid=15.500
+damage.pulse.racial.Animal=16.000
+damage.pulse.racial.Plant=16.500
+damage.pulse.racial.Herbivore=16.000
+damage.pulse.racial.Carnivore=15.500
+damage.pulse.racial.Parasite=13.000
+damage.pulse.racial.Beholder=11.000
+damage.pulse.racial.Dracolich=15.000
+damage.pulse.racial.Slime=14.000
+damage.pulse.racial.Githzerai=15.000
+damage.pulse.racial.Angel=14.000
+damage.pulse.racial.Rakshasa=14.000
+damage.pulse.racial.Efreet=12.000
+damage.pulse.racial.SnowOgre=15.500
+damage.pulse.racial.Beholderkin=10.000
+damage.pulse.racial.Archon=13.000
+damage.pulse.racial.Bralani=13.000
+damage.pulse.racial.Asura=12.500
 damage.pulse.racial.Titan=14.000
 damage.pulse.racial.Avatar=14.000
-damage.pulse.racial.Skeleton=12.000
-damage.pulse.racial.Zombie=12.000
-damage.pulse.racial.Wraith=10.000
+damage.pulse.racial.Skeleton=15.000
+damage.pulse.racial.Zombie=16.000
+damage.pulse.racial.Wraith=11.000
 damage.pulse.racial.Spectre=10.500
 damage.pulse.racial.Shadow=10.500
 damage.pulse.racial.Deva=10.500
-damage.pulse.racial.Drider=13.000
-damage.pulse.racial.PurpleWorm=10.000
+damage.pulse.racial.Drider=15.000
+damage.pulse.racial.PurpleWorm=15.000
 damage.pulse.racial.Agathinon=11.000
-damage.pulse.racial.VoidElemental=11.000
-damage.pulse.racial.IceElemental=15.000
+damage.pulse.racial.VoidElemental=13.000
+damage.pulse.racial.IceElemental=16.000
 damage.pulse.racial.Eladrin=12.000
-damage.pulse.racial.Kobold=9.000
+damage.pulse.racial.Kobold=10.000
 damage.pulse.racial.Pillithid=14.000
 damage.pulse.racial.KuoToa=15.000
 damage.pulse.racial.WoodElf=14.000
-damage.pulse.racial.Firbolg=15.400
+damage.pulse.racial.Firbolg=17.000
 damage.totalOutput.class.None=1.000
 damage.totalOutput.class.Warrior=1.150
 damage.totalOutput.class.Ranger=1.050
@@ -512,7 +512,7 @@ spellcast.pulse.racial.Shadow=0.700
 spellcast.pulse.racial.Wraith=0.760
 spellcast.pulse.racial.Spectre=1.000
 spellcast.pulse.racial.Zombie=1.000
-spellcast.pulse.racial.Drider=1.100
+spellcast.pulse.racial.Drider=0.950
 spellcast.pulse.racial.PurpleWorm=1.100
 spellcast.pulse.racial.Agathinon=0.900
 spellcast.pulse.racial.VoidElemental=1.000
@@ -571,28 +571,29 @@ exp.factor.paladin.vsEvil=1.150
 exp.factor.antipaladin.vsGood=1.333
 exp.factor.Minotaur=0.850
 exp.factor.Thri-kreen=0.800
-exp.factor.MountainDwarf=0.850
+exp.factor.MountainDwarf=0.900
 exp.factor.Agathinon=0.790
+exp.factor.Drider=0.900
 exp.factor.Lich=0.550
 exp.factor.Vampire=0.790
 exp.factor.Half-elf=1.000
 exp.factor.Githzerai=0.900
-exp.factor.Gnome=0.850
+exp.factor.Gnome=0.900
 exp.factor.Centaur=0.900
 exp.factor.Halfling=0.900
 exp.factor.GreyElf=0.800
-exp.factor.Human=1.200
-exp.factor.DrowElf=0.750
+exp.factor.Human=1.300
+exp.factor.DrowElf=0.800
 exp.factor.DuergarDwarf=0.850
 exp.factor.Goblin=0.850
-exp.factor.Githyanki=0.850
-exp.factor.Troll=0.800
+exp.factor.Githyanki=0.800
+exp.factor.Troll=0.850
 exp.factor.Ogre=0.850
 exp.factor.Orog=0.850
 exp.factor.Orc=1.150
 exp.factor.Illithid=0.200
 exp.factor.Eladrin=0.666
-exp.factor.Kobold=0.850
+exp.factor.Kobold=0.900
 exp.factor.Pillithid=0.750
 exp.factor.KuoToa=0.800
 exp.factor.WoodElf=1.000
@@ -811,16 +812,16 @@ hitpoints.class.Dreadlord=1.000
 hitpoints.class.Avenger=1.000
 hitpoints.class.Theurgist=0.500
 hitpoints.zoneDifficulty.factor=0.350
-stats.str.Human=115.000
-stats.dex.Human=95.000
-stats.agi.Human=95.000
+stats.str.Human=105.000
+stats.dex.Human=105.000
+stats.agi.Human=105.000
 stats.con.Human=110.000
 stats.pow.Human=100.000
 stats.int.Human=100.000
 stats.wis.Human=100.000
 stats.cha.Human=100.000
 stats.kar.Human=100.000
-stats.luc.Human=115.000
+stats.luc.Human=100.000
 stats.str.Barbarian=155.000
 stats.dex.Barbarian=90.000
 stats.agi.Barbarian=90.000
@@ -833,65 +834,65 @@ stats.kar.Barbarian=100.000
 stats.luc.Barbarian=90.000
 stats.str.DrowElf=90.000
 stats.dex.DrowElf=110.000
-stats.agi.DrowElf=115.000
-stats.con.DrowElf=85.000
-stats.pow.DrowElf=95.000
-stats.int.DrowElf=105.000
-stats.wis.DrowElf=110.000
-stats.cha.DrowElf=95.000
+stats.agi.DrowElf=130.000
+stats.con.DrowElf=90.000
+stats.pow.DrowElf=110.000
+stats.int.DrowElf=120.000
+stats.wis.DrowElf=115.000
+stats.cha.DrowElf=90.000
 stats.kar.DrowElf=100.000
-stats.luc.DrowElf=90.000
+stats.luc.DrowElf=100.000
 stats.str.GreyElf=90.000
-stats.dex.GreyElf=105.000
+stats.dex.GreyElf=110.000
 stats.agi.GreyElf=120.000
 stats.con.GreyElf=90.000
-stats.pow.GreyElf=85.000
-stats.int.GreyElf=100.000
-stats.wis.GreyElf=110.000
+stats.pow.GreyElf=105.000
+stats.int.GreyElf=115.000
+stats.wis.GreyElf=120.000
 stats.cha.GreyElf=120.000
 stats.kar.GreyElf=100.000
-stats.luc.GreyElf=90.000
-stats.str.MountainDwarf=130.000
-stats.dex.MountainDwarf=85.000
+stats.luc.GreyElf=100.000
+stats.str.MountainDwarf=135.000
+stats.dex.MountainDwarf=95.000
 stats.agi.MountainDwarf=85.000
-stats.con.MountainDwarf=130.000
-stats.pow.MountainDwarf=85.000
-stats.int.MountainDwarf=80.000
-stats.wis.MountainDwarf=130.000
-stats.cha.MountainDwarf=85.000
+stats.con.MountainDwarf=120.000
+stats.pow.MountainDwarf=90.000
+stats.int.MountainDwarf=85.000
+stats.wis.MountainDwarf=125.000
+stats.cha.MountainDwarf=80.000
 stats.kar.MountainDwarf=100.000
-stats.luc.MountainDwarf=90.000
+stats.luc.MountainDwarf=100.000
 stats.str.DuergarDwarf=130.000
 stats.dex.DuergarDwarf=90.000
 stats.agi.DuergarDwarf=90.000
 stats.con.DuergarDwarf=135.000
-stats.pow.DuergarDwarf=80.000
-stats.int.DuergarDwarf=70.000
-stats.wis.DuergarDwarf=135.000
+stats.pow.DuergarDwarf=85.000
+stats.int.DuergarDwarf=75.000
+stats.wis.DuergarDwarf=130.000
 stats.cha.DuergarDwarf=70.000
 stats.kar.DuergarDwarf=100.000
-stats.luc.DuergarDwarf=90.000
+stats.luc.DuergarDwarf=100.000
 stats.str.Halfling=95.000
-stats.dex.Halfling=145.000
-stats.agi.Halfling=120.000
+stats.dex.Halfling=130.000
+stats.agi.Halfling=125.000
 stats.con.Halfling=95.000
-stats.pow.Halfling=70.000
-stats.int.Halfling=90.000
+stats.pow.Halfling=80.000
+stats.int.Halfling=100.000
 stats.wis.Halfling=115.000
-stats.cha.Halfling=90.000
+stats.cha.Halfling=110.000
 stats.kar.Halfling=100.000
-stats.luc.Halfling=90.000
-stats.str.Gnome=105.000
-stats.dex.Gnome=125.000
-stats.agi.Gnome=110.000
-stats.con.Gnome=95.000
-stats.pow.Gnome=80.000
-stats.int.Gnome=120.000
+stats.luc.Halfling=120.000
+stats.str.Gnome=85.000
+stats.dex.Gnome=115.000
+stats.agi.Gnome=120.000
+stats.con.Gnome=90.000
+stats.pow.Gnome=105.000
+stats.int.Gnome=130.000
 stats.wis.Gnome=95.000
-stats.cha.Gnome=80.000
+stats.cha.Gnome=95.000
 stats.kar.Gnome=100.000
-stats.luc.Gnome=90.000
-stats.str.Ogre=240.000
+stats.luc.Gnome=100.000
+stats.str.Ogre=230.000
 stats.dex.Ogre=65.000
 stats.agi.Ogre=65.000
 stats.con.Ogre=200.000
@@ -933,14 +934,14 @@ stats.kar.Illithid=100.000
 stats.luc.Illithid=100.000
 stats.str.Orc=120.000
 stats.dex.Orc=100.000
-stats.agi.Orc=100.000
+stats.agi.Orc=95.000
 stats.con.Orc=125.000
-stats.pow.Orc=95.000
+stats.pow.Orc=100.000
 stats.int.Orc=95.000
-stats.wis.Orc=95.000
+stats.wis.Orc=90.000
 stats.cha.Orc=85.000
 stats.kar.Orc=100.000
-stats.luc.Orc=90.000
+stats.luc.Orc=100.000
 stats.str.Orog=160.000
 stats.dex.Orog=120.000
 stats.agi.Orog=120.000
@@ -971,16 +972,16 @@ stats.wis.Centaur=90.000
 stats.cha.Centaur=90.000
 stats.kar.Centaur=100.000
 stats.luc.Centaur=90.000
-stats.str.Githyanki=95.000
+stats.str.Githyanki=100.000
 stats.dex.Githyanki=100.000
-stats.agi.Githyanki=105.000
-stats.con.Githyanki=90.000
-stats.pow.Githyanki=120.000
-stats.int.Githyanki=115.000
+stats.agi.Githyanki=100.000
+stats.con.Githyanki=100.000
+stats.pow.Githyanki=130.000
+stats.int.Githyanki=120.000
 stats.wis.Githyanki=90.000
-stats.cha.Githyanki=85.000
+stats.cha.Githyanki=75.000
 stats.kar.Githyanki=100.000
-stats.luc.Githyanki=90.000
+stats.luc.Githyanki=100.000
 stats.str.Minotaur=180.000
 stats.dex.Minotaur=80.000
 stats.agi.Minotaur=80.000
@@ -1011,16 +1012,16 @@ stats.wis.Revenant=75.000
 stats.cha.Revenant=50.000
 stats.kar.Revenant=100.000
 stats.luc.Revenant=100.000
-stats.str.Goblin=90.000
-stats.dex.Goblin=140.000
-stats.agi.Goblin=125.000
+stats.str.Goblin=100.000
+stats.dex.Goblin=135.000
+stats.agi.Goblin=115.000
 stats.con.Goblin=100.000
 stats.pow.Goblin=85.000
-stats.int.Goblin=115.000
+stats.int.Goblin=110.000
 stats.wis.Goblin=105.000
-stats.cha.Goblin=80.000
+stats.cha.Goblin=90.000
 stats.kar.Goblin=100.000
-stats.luc.Goblin=90.000
+stats.luc.Goblin=110.000
 stats.str.Lich=70.000
 stats.dex.Lich=100.000
 stats.agi.Lich=115.000
@@ -1433,14 +1434,14 @@ stats.kar.Slime=5.000
 stats.luc.Slime=100.000
 stats.str.Githzerai=100.000
 stats.dex.Githzerai=100.000
-stats.agi.Githzerai=105.000
-stats.con.Githzerai=98.000
-stats.pow.Githzerai=115.000
-stats.int.Githzerai=105.000
-stats.wis.Githzerai=95.000
+stats.agi.Githzerai=100.000
+stats.con.Githzerai=100.000
+stats.pow.Githzerai=120.000
+stats.int.Githzerai=115.000
+stats.wis.Githzerai=110.000
 stats.cha.Githzerai=90.000
 stats.kar.Githzerai=100.000
-stats.luc.Githzerai=90.000
+stats.luc.Githzerai=100.000
 stats.str.Angel=120.000
 stats.dex.Angel=120.000
 stats.agi.Angel=120.000
@@ -1601,14 +1602,14 @@ stats.wis.Avatar=132.000
 stats.cha.Avatar=100.000
 stats.kar.Avatar=100.000
 stats.luc.Avatar=100.000
-stats.str.Drider=117.000
-stats.dex.Drider=115.000
-stats.agi.Drider=115.000
-stats.con.Drider=110.000
+stats.str.Drider=130.000
+stats.dex.Drider=110.000
+stats.agi.Drider=110.000
+stats.con.Drider=140.000
 stats.pow.Drider=85.000
-stats.int.Drider=105.000
-stats.wis.Drider=100.000
-stats.cha.Drider=75.000
+stats.int.Drider=95.000
+stats.wis.Drider=85.000
+stats.cha.Drider=70.000
 stats.kar.Drider=100.000
 stats.luc.Drider=100.000
 stats.str.PurpleWorm=185.000
@@ -1671,16 +1672,16 @@ stats.wis.Eladrin=100.000
 stats.cha.Eladrin=90.000
 stats.kar.Eladrin=100.000
 stats.luc.Eladrin=100.000
-stats.str.Kobold=85.000
-stats.dex.Kobold=120.000
+stats.str.Kobold=90.000
+stats.dex.Kobold=110.000
 stats.agi.Kobold=120.000
 stats.con.Kobold=95.000
-stats.pow.Kobold=70.000
-stats.int.Kobold=130.000
+stats.pow.Kobold=95.000
+stats.int.Kobold=125.000
 stats.wis.Kobold=105.000
-stats.cha.Kobold=70.000
+stats.cha.Kobold=100.000
 stats.kar.Kobold=100.000
-stats.luc.Kobold=90.000
+stats.luc.Kobold=100.000
 stats.str.Pillithid=83.000
 stats.dex.Pillithid=105.000
 stats.agi.Pillithid=105.000
@@ -1711,10 +1712,10 @@ stats.wis.WoodElf=91.000
 stats.cha.WoodElf=85.000
 stats.kar.WoodElf=100.000
 stats.luc.WoodElf=100.000
-stats.str.Firbolg=230.000
+stats.str.Firbolg=210.000
 stats.dex.Firbolg=75.000
 stats.agi.Firbolg=75.000
-stats.con.Firbolg=175.000
+stats.con.Firbolg=190.000
 stats.pow.Firbolg=65.000
 stats.int.Firbolg=75.000
 stats.wis.Firbolg=80.000
@@ -1729,13 +1730,13 @@ innate.warcallersfury.maxSteps=10.000
 innate.shrug.Dragonkin=30.000
 innate.shrug.Illithid=70.000
 innate.shrug.GreyElf=40.000
-innate.shrug.Githyanki=35.000
+innate.shrug.Githyanki=25.000
 innate.shrug.Phantom=20.000
 innate.shrug.Half-Elf=20.000
 innate.shrug.Human=0.000
 innate.shrug.Lich=80.000
 innate.shrug.Eladrin=35.000
-innate.shrug.DrowElf=50.000
+innate.shrug.DrowElf=45.000
 innate.shrug.Vampire=60.000
 innate.shrug.AirElemental=20.000
 innate.shrug.WaterElemental=55.000
@@ -1747,14 +1748,14 @@ innate.shrug.Undead=20.000
 innate.shrug.Dragon=60.000
 innate.shrug.Beholder=85.000
 innate.shrug.Dracolich=30.000
-innate.shrug.Githzerai=30.000
+innate.shrug.Githzerai=20.000
 innate.shrug.Angel=40.000
 innate.shrug.Beholderkin=35.000
 innate.shrug.Spectre=20.000
 innate.shrug.Wraith=35.000
 innate.shrug.Shadow=60.000
 innate.shrug.Deva=35.000
-innate.shrug.Drider=60.000
+innate.shrug.Drider=25.000
 innate.shrug.Agathinon=25.000
 innate.shrug.VoidElemental=35.000
 innate.shrug.IceElemental=5.000
