Big round of Blighter skills/spells.  They use the 'deforest' command to mem.

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -1902,7 +1902,8 @@ movement.forest.lostChance=0.000
 [memorization]
 memorize.factor.multiclass=1.750
 memorize.factor.tupor=1.000
-memorize.factor.multi.commune=1.000
+memorize.factor.multi.commune=1.500
+memorize.factor.multi.deforest=1.500
 memorize.factor.commune=0.900
 memorize.factor.npc=0.500
 memorize.lowlvl.cap=25.000
