Changed Conjurers back to Air/Water/Fire/Earth and added class Summoners (conj clone) to be Controller/Summoner/Naturalist.

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -364,6 +364,7 @@ damage.totalOutput.class.Ethermancer=1.000
 damage.totalOutput.class.Sorcerer=0.850
 damage.totalOutput.class.Necromancer=1.000
 damage.totalOutput.class.Conjurer=0.800
+damage.totalOutput.class.Summoner=0.800
 damage.totalOutput.class.Rogue=1.100
 damage.totalOutput.class.Assassin=1.000
 damage.totalOutput.class.Mercenary=1.000
@@ -394,6 +395,7 @@ damage.pulse.class.Ethermancer=0.000
 damage.pulse.class.Sorcerer=2.000
 damage.pulse.class.Necromancer=2.000
 damage.pulse.class.Conjurer=2.000
+damage.pulse.class.Summoner=2.000
 damage.pulse.class.Rogue=-1.000
 damage.pulse.class.Assassin=1.000
 damage.pulse.class.Mercenary=0.000
@@ -798,7 +800,7 @@ hitpoints.class.Shaman=0.700
 hitpoints.class.Ethermancer=0.800
 hitpoints.class.Sorcerer=0.600
 hitpoints.class.Necromancer=0.500
-hitpoints.class.Conjurer=0.500
+hitpoints.class.Summoner=0.500
 hitpoints.class.Rogue=0.800
 hitpoints.class.Assassin=0.800
 hitpoints.class.Mercenary=0.900
@@ -2246,6 +2248,7 @@ gain.exp.mod.avenger=0.900
 gain.exp.mod.dreadlord=0.900
 gain.exp.mod.sorcerer=1.100
 gain.exp.mod.conjurer=1.100
+gain.exp.mod.summoner=1.100
 gain.exp.mod.necromancer=1.000
 gain.exp.mod.theurgist=1.000
 gain.exp.mod.psionicist=1.150
