Changed notch_skill( char, skill, chance ) such that chance no longer represents a 1 in chance+1 chance to notch, but now is a % chance to notch.  Also, chance is now a float so we can send a 15.25/2.5/etc % chance if we want to.

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -1822,28 +1822,29 @@ skill.arcane.block.dam.reduction=0.004
 skill.notch.offensive.vicious.strike=5.000
 skill.notch.soulTrap=5.000
 skill.notch.defensive=5.000
-skill.notch.offensive=10.000
-skill.notch.offensive.auto=25.000
+skill.notch.offensive=7.000
+skill.notch.offensive.auto=4.000
 skill.notch.switch=10.000
 skill.notch.callGrave=10.000
 skill.notch.rescue=10.000
-skill.notch.arcane=50.000
-skill.notch.mining=20.000
+skill.notch.arcane=10.000
+skill.notch.mining=2.500
 skill.notch.criticalAttack=10.000
 skill.notch.blindFighting=15.000
 skill.notch.meditate=30.000
 skill.notch.shriek=6.000
-skill.notch.quickChant=40.000
+skill.notch.quickChant=2.500
 skill.notch.hardcoreBonus=0.600
 skill.notch.pyrokinetics=50.000
 skill.notch.fishing=25.000
 skill.notch.spellWeave=50.000
-skill.notch.bandage=30.000
+skill.notch.bandage=3.000
 skill.notch.guard=5.000
 skill.notch.cleave=10.000
+skill.notch.smiteEvil=10.000
 skill.notch.groundCasting=60.000
-skill.notch.chants=25.000
-skill.notch.slip=20.000
+skill.notch.chants=20.000
+skill.notch.slip=5.000
 skill.notch.bearhug=7.000
 skill.notch.headlock=5.000
 skill.notch.armlock=5.000
